<resources>
    <string name="app_name">UID查询</string>
    <string name="title_activity_update">更新数据库</string>
    <string name="title_activity_watch">查看数据库</string>

    <string name="content_authority">com.example.android.uidsearch.app</string>

    <string name="action_settings">Settings</string>
    <string name="updata_Setting">添加</string>
    <string name="watch_Setting">查看</string>

    <string name="inputtitlt">序列号</string>
    <string name="inputhint">输入序列号</string>
    <string name="outputtitle">结果</string>
    <string name="outputhint">查询结果</string>
    <string name="btncal">查询</string>

    <string name="updateUID">添加UID</string>

    <string name="empty_forecast_list">数据为空</string>
    <string name="item_copy">复制</string>
    <string name="item_del">删除</string>

</resources>
